--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,3 +30,31 @@ body {
     background-color: transparent;
 }
 
+.column {
+    margin-top: 20px;
+}
+
+.masthead {
+    margin-top: 10px;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    height: 33vh;
+    width: 100%;
+}
+
+.masthead-text {
+    background-color: #445261;
+    color: red;
+    position: relative;
+}
+
+.masthead-image {
+    position: relative;
+    overflow: hidden;
+}
+.note-toolbar .note-btn, .note-toolbar .note-btn:focus, .note-toolbar .note-btn:active {
+    background-color: #2e353e !important;
+    color: #9097a0 !important;
+    border-color: #2e353e !important;
+}
