--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- Bootstrap 5 script -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    </script>
+     <!-- Bootstrap 5 script -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+ </script>
     {% block title %}
     {% endblock %}
 </head>
@@ -58,16 +58,16 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="#">Log Out</a>
+                            href="{% url 'account_logout' %}">Log Out</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="#">Log In</a>
+                            href="% url 'account_login' %}">Log In</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="#">Register</a>
+                            href="% url 'account_signup' %}">Register</a>
                     </li>
                     {% endif %}
                 </ul>
