--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,7 +8,7 @@
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
-            <div class="d-none d-md-block">
+            <div class="d-md-block">
                 {% if "placeholder" in post.featured_image.url %}
                 <img src="../static/media/site_imgs/hero-image.jpg" width="100%">
                 {% else %}
