Allow users to leave comments on blog posts

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,6 +1,8 @@
 
 {% extends 'base.html' %} {% block content %}
 
+{% load crispy_forms_tags %}
+
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
@@ -19,17 +21,20 @@
     </div>
 </div>
 
+
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left top">
+        <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
-                <p class="card-text">
+                <p class="card-text ">
                     {{ post.content | safe }}
                 </p>
                 <div class="row">
+
                     <div class="col-1">
                         <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
                     </div>
+                    
                     <div class="col-1">
                         {% with comments.count as total_comments %}
                         <strong class="text-secondary"><i class="far fa-comments"></i>
@@ -40,29 +45,45 @@
             </div>
         </div>
     </div>
+        
     <div class="row">
         <div class="col">
             <hr>
         </div>
     </div>
+
     <div class="row">
-        <div class="col-md-8 card mb-4 mt-3">
+        <div class="col-md-8 card mb-4  mt-3 ">
             <h3>Comments:</h3>
             <div class="card-body">
                 {% for comment in comments %}
-                <div class="comments">
+                <div class="comments" style="padding: 10px;">
                     <p class="font-weight-bold">
                         {{ comment.name }}
-                        <span class="text-muted font-weight-normal">
+                        <span class=" text-muted font-weight-normal">
                             {{ comment.created_on }}
                         </span> wrote:
                     </p>
+                   
                     {{ comment.body | linebreaks }}
                 </div>
                 {% endfor %}
             </div>
         </div>
-     
+        <div class="col-md-4 card mb-4  mt-3 ">
+            <div class="card-body">
+                {% if user.is_authenticated %}
+
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em;">
+                    {% csrf_token %}
+                    {{ comment_form | crispy }}
+                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+                </form>
+        
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
