--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -41,7 +41,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-warning right" type="submit">{% trans "LOGIN" %}</button>
+        <button class="btn btn-success right" type="submit">{% trans "LOGIN" %}</button>
       </form>
     </div>
   </div>
