Add alert message functionality for improved user experience

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -90,7 +90,7 @@
                 <!--User leaves a comment-->
                 {% if commented %}
                 <div class="alert alert-success" role="alert">
-                    Your comment is awaiting admin approval
+                    Your comment is awaiting moderation.
                 </div>
                 {% else %}
             
