--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-     <!-- Bootstrap 5 script -->
-     
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
@@ -35,7 +30,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg align-items-center navbar-dark bg-dark">
-        <div class="container-fluid ">
+        <div class="container-fluid">
             <div class="col">
                 <a class="navbar-brand nav-link" href="{% url 'home' %}">KettleBellion</a>
             </div>
@@ -77,7 +72,24 @@
         </div>
     </nav>
 
-    <main>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+
+                <div class="alert {{ message.tags }} alert-dismissible fade show  alert-box"
+                id="auto-dismiss" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" style="padding: 14px"
+                aria-label="Close"></button>
+                </div>
+
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
+    <main class="flex-shrink-0 main-bg">
         <!-- Hero Image -->
         {% block header %}
         {% endblock %}
@@ -156,6 +168,18 @@
             </div>
         </div>
     </footer>
+<!-- Bootstrap5 script -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+</script>
+<!-- Bootstrap5 Alerts automatic dismiss -->
+<script>
+    setTimeout(function() {
+        let messages = document.getElementById("auto-dismiss");
+        let alert = new bootstrap.Alert(messages);
+        alert.close();
+    }, 5000);
+</script>
 </body>
 
 </html>
