--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="#">About</a>
+                            href="{% url 'about' %}">About</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
