--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,7 +8,8 @@
         <div class="row g-0">
             <div class="col-md-6">
                 <h1 class="post-title">{{ post.title }}</h1>
-                <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
+                <p class="post-subtitle">Created by: {{ post.author }} </p>
+                <p class="post-subtitle">on {{ post.created_on }}</p>
             </div>
             <div class="d-md-block">
                 {% if "placeholder" in post.featured_image.url %}
@@ -24,7 +25,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
+        <div class="col card mb-4  mt-3 left top">
             <div class="card-body">
                 <p class="card-text">
                     {{ post.content | safe }}
@@ -32,7 +33,6 @@
                 <div class="row">
                     <!--Number of likes icon/button-->
                     <div class="col-1">
-                        
                             {% if user.is_authenticated %}
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
                                 {% csrf_token %}
@@ -68,7 +68,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-8 card mb-4  mt-3 ">
+        <div class="col-md-8 card mb-4  mt-3" style="padding: 10px">
             <h3>Comments:</h3>
             <div class="card-body">
                 {% for comment in comments %}
