--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,9 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link"
-                            href="#">Share a Workout</a>
+                        <a class="nav-link  {% block active_add_workout %}{% endblock %}"
+                        {% block aria_add_workout %}{% endblock %}
+                            href="{% url 'add_workout' %}">Share a Workout</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
