--- a/templates/base.html
+++ b/templates/base.html
@@ -76,16 +76,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                {% for message in messages %}
+                {% if messages %}
+                    {% for message in messages %}
 
-                <div class="alert {{ message.tags }} alert-dismissible fade show  alert-box"
-                id="auto-dismiss" role="alert">
-                {{ message | safe }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" style="padding: 14px"
-                aria-label="Close"></button>
-                </div>
+                    <div class="alert {{ message.tags }} alert-dismissible fade show  alert-box"
+                    id="auto-dismiss" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" style="padding: 14px"
+                    aria-label="Close"></button>
+                    </div>
 
-                {% endfor %}
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
     </div>
