--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<h1 class="text-center mt-3 mb-4">Who are we?</h1>
+<h3 class="text-center mt-3 mb-4">Who Are We?</h3>
 
 <div class="container text-center about-text">
     <div class="row">
@@ -20,11 +20,11 @@
             <p>KettleBellion connects you with like-minded people who love to snatch, clean and jerk kettlebells. Our friendly community is here to help you make kettlebell training a part of your fitness routine.</p>
         </div>
         <div class="col-10 mx-auto mt-3 mb-5">
-            <h3>Our Story</h3>
+            <h3 class="text-center mt-3 mb-4">Our Story</h3>
             <p>In March 2020, KettleBellion was founded by a group of kettlebell enthusiasts 
                 who met each other in the local crossfit club and became passionate about 
                 healthy lifestyle. During the tough times of pandemic the online concept of sharing 
-                their knowledge of kettlebell training got appreciative audience and 
+                their knowledge of kettlebell training gained the appreciative audience and 
                 has formed the present community.</p>
         </div>
     </div>
