--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@ aria-current="page" id="active-green"
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="{% static 'media/site_imgs/hero-image.jpg' %}">
+                                    src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
