--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,7 +13,7 @@
             </div>
             <div class="d-md-block">
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="../static/media/site_imgs/hero-image.jpg" width="100%">
+                <img src="../static/media/site_imgs/hero-image.jpg" alt="kettlebell athlete" width="100%">
                 {% else %}
                 <img src=" {{ post.featured_image.url }}" width="100%">
                 {% endif %}
