Debug image rendering

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row g-0">
             <div class="d-md-block">
-                <img src="../static/media/site_imgs/hero-image.jpg" alt="kettlebell athlete" width="100%"> 
+                <img src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete" width="100%"> 
             </div>
         </div>
     </div>
