--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -12,9 +12,11 @@
                 <p class="post-subtitle">on {{ post.created_on }}</p>
             </div>
             <div class="d-md-block">
-
-                <img src="../static/media/site_imgs/hero-image.jpg" alt="kettlebell athlete" width="100%">
-                
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="https://res.cloudinary.com/dxdf9d4zk/image/upload/v1662888275/static/media/site_imgs/hero-image.9578a75d90f1.jpg" alt="kettlebell athlete" width="100%">
+                {% else %}
+                <img src=" {{ post.featured_image.url }}" width="100%">
+                {% endif %}
             </div>
         </div>
     </div>
