--- a/templates/about.html
+++ b/templates/about.html
@@ -1,32 +1,34 @@
+{% extends 'base.html' %}
+{% load cloudinary %}
+{% load crispy_forms_tags %}
+{% load static %}
 
-{% extends 'base.html' %} {% block content %}
-
-
-<div class="masthead">
-    <div class="container">
-        <div class="row g-0">
-            <div class="d-md-block">
-                <img src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete" width="100%"> 
+{% block content %}
+    <div class="masthead">
+        <div class="container">
+            <div class="row g-0">
+                <div class="d-md-block">
+                    <img src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete" width="100%"> 
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<h3 class="text-center mt-3 mb-4">Who Are We?</h3>
+    <h3 class="text-center mt-3 mb-4">Who Are We?</h3>
 
-<div class="container text-center about-text">
-    <div class="row">
-        <div class="col-12 mx-auto mt-3">
-            <p>KettleBellion connects you with like-minded people who love to snatch, clean and jerk kettlebells. Our friendly community is here to help you make kettlebell training a part of your fitness routine.</p>
-        </div>
-        <div class="col-10 mx-auto mt-3 mb-5">
-            <h3 class="text-center mt-3 mb-4">Our Story</h3>
-            <p>In March 2020, KettleBellion was founded by a group of kettlebell enthusiasts 
-                who met each other in the local crossfit club and became passionate about 
-                healthy lifestyle. During the tough times of pandemic the online concept of sharing 
-                their knowledge of kettlebell training gained the appreciative audience and 
-                has formed the present community.</p>
+    <div class="container text-center about-text">
+        <div class="row">
+            <div class="col-12 mx-auto mt-3">
+                <p>KettleBellion connects you with like-minded people who love to snatch, clean and jerk kettlebells. Our friendly community is here to help you make kettlebell training a part of your fitness routine.</p>
+            </div>
+            <div class="col-10 mx-auto mt-3 mb-5">
+                <h3 class="text-center mt-3 mb-4">Our Story</h3>
+                <p>In March 2020, KettleBellion was founded by a group of kettlebell enthusiasts 
+                    who met each other in the local crossfit club and became passionate about 
+                    healthy lifestyle. During the tough times of pandemic the online concept of sharing 
+                    their knowledge of kettlebell training gained the appreciative audience and 
+                    has formed the present community.</p>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
