--- a/templates/add_workout.html
+++ b/templates/add_workout.html
@@ -27,7 +27,7 @@ aria-current="page" id="active-green"
     <div class="container">
         <div class="row g-0">
             <div class="d-md-block">
-                <img src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete" width="100%"> 
+                <img src="https://res.cloudinary.com/dxdf9d4zk/image/upload/v1662888275/static/media/site_imgs/hero-image.9578a75d90f1.jpg" alt="kettlebell athlete" width="100%"> 
             </div>
         </div>
     </div>
