--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ aria-current="page" id="active-green"
 {% block header %}
 <header>
     {% load static %}
-    <img class="img-fluid header-image" src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete" width=100%>
+    <img class="img-fluid header-image" src="https://res.cloudinary.com/dxdf9d4zk/image/upload/v1662888275/static/media/site_imgs/hero-image.9578a75d90f1.jpg" alt="kettlebell athlete" width=100%>
 </header>
 {% endblock %}
 
