--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@ aria-current="page" id="active-green"
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top" 
-                                    src="{% static 'media/site_imgs/hero-image.jpg' %}" alt="kettlebell athlete">
+                                    src="https://res.cloudinary.com/dxdf9d4zk/image/upload/v1662888275/static/media/site_imgs/hero-image.9578a75d90f1.jpg"  alt="kettlebell athlete">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
